Fixed profile info alignment

--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
 @font-face { font-family: mplus; src: url(./fonts/mplus.ttf); }
 body { background-image: url('./images/bg.png'); padding: min(5vw, 5vh); display: flex; justify-content: center; align-items: center; background-repeat: repeat; }
 .wrapper { font-family: mplus; font-size: 14px; padding: min(1vw, 1vh); background-color: #ffffe0; opacity: 0.9; width: 70vw; border: 0.75rem ridge rgba(211, 220, 50, .6); }
-header { display: flex; gap: 5vw; flex-direction: row; padding: 0.5rem 1rem; font-family: pf7; }
+header { display: flex; flex-direction: row; justify-content: space-between; padding: 0.5rem 1rem; font-family: pf7; }
 header>.avatar>img { width: 14rem; border: 1rem ridge rgba(211, 220, 50, .6); }
 footer { text-align: right; }
 a { text-decoration: none; }
